2007-02-08  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/bch.h, itpp/comm/channel_code.h, itpp/comm/convcode.h,
	itpp/comm/egolay.h, itpp/comm/hammcode.h, itpp/comm/ldpc.h,
	itpp/comm/punct_convcode.h, itpp/comm/reedsolomon.h,
	itpp/comm/turbo.h: Changed get_rate() functions into const ones

2007-02-07  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/fastmath.h, itpp/base/gf2mat.h, itpp/base/ittypes.h,
	itpp/base/mat.h, itpp/base/matfunc.h, itpp/base/math/elem_math.h,
	itpp/base/math/error.cpp, itpp/base/math/integration.cpp,
	itpp/base/operators.h, itpp/base/parser.h, itpp/base/smat.h,
	itpp/base/svec.h, itpp/base/vec.h: Fixed Doxygen warnings by
	adding or correcting the documentation

2007-02-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/itassert.h: Added missing documentation for macros

	* itpp/base/converters.cpp, itpp/base/converters.h: Fixed Doxygen
	errors and improved the implementation of to_cvec() and to_cmat()
	functions

2007-02-05  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/array.h, itpp/base/binfile.cpp, itpp/base/binfile.h,
	itpp/base/converters.cpp: Documentation fixes related to Doxygen
	warnings and errors

	* itpp/base/algebra/ls_solve.h: Fixed improper declarations of
	ls_solve_od() and ls_solve_ud() methods

	* itpp/base/itfile.h: Replaced "uint32_t" with "unsigned int",
	which is a workaroud for the compilation problem under Cygwin.

2007-02-04  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/ldpc.cpp, tests/ldpc_test.ref: Updated information
	messages

2007-02-04  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/Makefile.am: Redirecting stderr to /dev/null during "make
	check"

	* itpp/base/itassert.h, itpp/base/itassert.cpp: Added
	it_info_no_endl() and it_info_no_endl_debug() macros, which does
	not append "std::endl" at the end of message.
	
2007-02-03  Adam Piatyszek  <ediap@users.sourceforge.net>
