@@ -1,5 +1,9 @@
 2007-02-08  Adam Piatyszek  <ediap@users.sourceforge.net>
 
+	* itpp/comm/rec_syst_conv_code.cpp,
+	itpp/comm/rec_syst_conv_code.h: "INF" preprocessor definition
+	replaced with a private constant "infinity"
+
 	* itpp/comm/bch.h, itpp/comm/channel_code.h, itpp/comm/convcode.h,
 	itpp/comm/egolay.h, itpp/comm/hammcode.h, itpp/comm/ldpc.h,
 	itpp/comm/punct_convcode.h, itpp/comm/reedsolomon.h,
